--- a/mtaani/templates/all-pages/edit_profile.html
+++ b/mtaani/templates/all-pages/edit_profile.html
@@ -1,17 +1,20 @@
-{% extends 'base.html' %}
-
+{% extends 'all-pages/base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
-<div class="container ">
+
+<div class="container bg-white editprofile" style="margin-top:4% ">
     <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-6 mt-4 bg-white prof mr-2 ml-2">
-            <img class="rounded-circle account-img d-block mx-auto" src="{{ user.profile.profile_picture.url }}"height="125px" width="125px">
-            <h5 class="text-center mt-3">{{user.username}}</h5>
-            <p class="text-center"> {{user.email}}</p>
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+            <h3 class="text-center">Update Profile</h3>
+            <form action="" method="post" novalidate enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form | crispy }}
+                <button class="btn btn-sm btn-outline-success"> Update</button>
+            </form>
         </div>
-        <div class="col-md-3"></div>
+        <div class="col-md-1"></div>
     </div>
-
-
 </div>
+
 {% endblock %}
