--- a/mtaani/templates/all-pages/profile.html
+++ b/mtaani/templates/all-pages/profile.html
@@ -1,7 +1,7 @@
 {% extends 'all-pages/base.html' %}
 
 {% block content %}
-<div class="container ">
+<div class="container mt-5">
     <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6 mt-4 bg-white prof mr-2 ml-2">
