create template for adding new hood

--- a/mtaani/templates/all-pages/all_hoods.html
+++ b/mtaani/templates/all-pages/all_hoods.html
@@ -1,8 +1,8 @@
 {% extends 'all-pages/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="container">
-        <a href="" class="btn btn-sm btn-info mb-2"> New Hood</a>
+<div class="container mt-5">
+        <a href="{% url 'new-hood' %}" class="btn btn-sm btn-info mb-2"> New Hood</a>
     <div class="row">
         {% for hood in all_hoods %}
         <div class="col-md-4">
