--- a/mtaani/templates/all-pages/all_hoods.html
+++ b/mtaani/templates/all-pages/all_hoods.html
@@ -2,12 +2,11 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="container mt-5">
-        <a href="{% url 'new-hood' %}" class="btn btn-sm btn-info mb-2"> New Hood</a>
     <div class="row">
         {% for hood in all_hoods %}
-        <div class="col-md-4">
-            <div class="card mb-4" style="min-height:340px">
-                <img src="{{ hood.neighbourhood_hood_logo.url }}" class="card-img-top" alt="{{ hood.neighbourhood_name }}">
+        <div class="col-md-4 mb-4">
+            <div class="card" >
+                <img height="" src="{{ hood.neighbourhood_hood_logo.url }}" class="card-img-top" alt="{{ hood.neighbourhood_name }}">
                 <div class="card-body">
                     <h5 class="card-title">{{ hood.neighbourhood_name }}  ({{hood.neighbourhood_location}}) <span class="ml-4">{{hood.members.count}} member{{hood.members.count|pluralize}}</span></h5>
                     <p class="card-text">{{hood.neighbourhood_description}}</p>
