--- a/mtaani/templates/all-pages/new_hood.html
+++ b/mtaani/templates/all-pages/new_hood.html
@@ -6,7 +6,7 @@
         <div class="col-md-1"></div>
         <div class="col-md-10">
             <h3 class="text-center">Add Your Neighborhood Here</h3>
-            <form action="" method="post" enctype="multipart/form-data" novalidate>
+            <form action="" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form|crispy }}
                 <button class="btn btn-sm btn-success">Add Hood</button>
