--- a/mtaani/templates/navbar.html
+++ b/mtaani/templates/navbar.html
@@ -19,7 +19,7 @@
       <div class="row align-items-center">
 
         
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar" id="nbar">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary scrolling-navbar" id="nbar">
           <div class="container">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
