--- a/mtaani/templates/all-pages/homepage.html
+++ b/mtaani/templates/all-pages/homepage.html
@@ -3,10 +3,10 @@
 {% block content %}
 <div class=" mt-3 hero"
     style="background-image: url('https://images.pexels.com/photos/10025314/pexels-photo-10025314.jpeg?auto=compress&cs=tinysrgb&w=600'); background-attachment: scroll;">
-    <div class="container">
+    <div class="container"  style="position: relative; top: 50%;">
         <div class="text-white text-center">
             <h5 style="margin-top:6%"> </h5>
-            <a href="{% url 'hood' %}" class="btn btn-sm btn-info mt-4" style="position: relative; top: 50%;">Join a hood <span>&#x1F601;</span></a>
+            <a href="{% url 'hood' %}" class="btn btn-sm btn-info mt-4">Join a hood <span>&#x1F601;</span></a>
         </div>
 
     </div>
