--- a/mtaani/templates/all-pages/all_hoods.html
+++ b/mtaani/templates/all-pages/all_hoods.html
@@ -11,10 +11,10 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ hood.neighbourhood_name }}  ({{hood.neighbourhood_location}}) <span class="ml-4">{{hood.members.count}} member{{hood.members.count|pluralize}}</span></h5>
                         <p class="card-text">{{hood.neighbourhood_description}}</p>
-                        {% if request.user.profile.neighbourhood == hood %}
-                        <a href="" class="btn btn-outline-danger btn-sm">Leave Hood</a>
+                        {% if request.user.profile.profile_neighbourhood == hood %}
+                        <a href="{% url 'leave-hood' hood.id %}" class="btn btn-outline-danger btn-sm">Leave Hood</a>
                         {% elif not request.user.profile.neighbourhood %}
-                        <a href="" class="btn btn-primary btn-sm">Join Hood</a>
+                        <a href="{% url 'join-hood' hood.id %}" class="btn btn-primary btn-sm">Join Hood</a>
                         {% endif %}
                     </div>
                 </div>
