patch line 24 in forms.py and text to hood link

--- a/mtaani/templates/all-pages/homepage.html
+++ b/mtaani/templates/all-pages/homepage.html
@@ -6,7 +6,7 @@
     <div class="container"  style="position: relative; top: 50%;">
         <div class="text-white text-center">
             <h5 style="margin-top:6%"> </h5>
-            <a href="{% url 'hood' %}" class="btn btn-sm btn-info mt-4">Join a hood <span>&#x1F601;</span></a>
+            <a href="{% url 'hood' %}" class="btn btn-sm btn-info mt-4">checkout the listed neighbourhoods <span>&#x1F601;</span></a>
         </div>
 
     </div>
