--- a/mtaani/templates/all-pages/members.html
+++ b/mtaani/templates/all-pages/members.html
@@ -1,7 +1,7 @@
 {% extends 'all-pages/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<table class="table table-striped table-light">
+<table class="table table-striped table-light" style="margin-top: 5%;">
   <thead>
     <tr>
       <th scope="col">#</th>
