--- a/mtaani/templates/all-pages/single-hood.html
+++ b/mtaani/templates/all-pages/single-hood.html
@@ -16,7 +16,8 @@
                             </h5>
                             <h6 class="card-text">
                                 <span><strong>{{hood.members.count}}</strong> Member{{hood.members.count|pluralize}}</span>
-                                | <strong>{{ hood.business.count }}</strong> Businesses
+                                | <strong>{{ hood.business.count }}</strong> Businesses  | <strong>
+                                    {{ hood.post_neighbourhood.count }}</strong> Post{{ hood.post_neighbourhood.count|pluralize }}
                             </h6>
                             <p class="card-text">{{hood.neighbourhood_description}}</p>
                             <p class="card-text"><span class="text-info">Police Contacts</span>
@@ -36,13 +37,10 @@
                 <a href="" class="btn btn-sm btn-outline-info mb-4 mr-4" data-toggle="modal" data-target="#ModalCenter">Add
                     Business</a>
                     <a class="btn btn-sm btn-outline-info mb-4" href="{% url 'new_post' hood.id %}">New Post</a>
-                {% if hood.neighbourhood_admin == user.profile %}
-                <a href="{% url 'members' hood.id %}" class="btn btn-sm btn-outline-info mb-4 ml-4">Members</a>
-                {% endif %}
-                <form class="form-inline" method="get" action="">
+                <form class="form-inline" method="get" action="{% url 'search-business' %}">
                     {% csrf_token %}
                     <div class="md-form my-0">
-                        <input class="form-control mr-sm-2 " type="text" placeholder="Search Business" name="title" aria-label="Search">
+                        <input class="form-control mr-sm-2 " type="text" placeholder="Search Business" name="post_title" aria-label="Search">
                     </div>
                 </form>
                 <h5 class="D-block mx-auto tt">Businesses</h5>
@@ -58,6 +56,23 @@
                                 <p class="card-text">{{bus.business_description}}</p>
                                 <p class="card-text">Owner: <small class="text-muted">
                                     {{ bus.business_user.profile_user.username|title }}</small></p>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+                <h5 class="D-block mx-auto tt">Posts</h5>
+                <div class="row">
+                    {% for post in posts %}
+                    <div class="col-md-4">
+                        <div class="card mb-4 hpost">
+                            <div class="card-body">
+                                <h5 class="card-title">{{post.post_title}}</h5>
+                                <p class="card-text">" {{post.post_description}} "
+                                </p>
+                                <p class="card-text">By: <small>
+                                    {{ post.post_user.profile_user.username|title }}</small> 
+                                </p>
                             </div>
                         </div>
                     </div>
