--- a/mtaani/templates/navbar.html
+++ b/mtaani/templates/navbar.html
@@ -36,12 +36,12 @@
                     </li>
                       <li class="nav-item active">
                         
-                          <form class="form-inline" method="get" action="">
-                              {% csrf_token %}
-                              <div class="md-form my-0">
-                                  <input class="form-control mr-sm-2 " type="text" placeholder="Search" name="title" aria-label="Search">
-                              </div>
-                          </form>
+                        <form class="form-inline" method="get" action="{% url 'search-all-businesses' %}">
+                          {% csrf_token %}
+                          <div class="md-form my-0">
+                              <input class="form-control mr-sm-2 " type="text" placeholder="Search Business" name="title" aria-label="Search">
+                          </div>
+                      </form>
                       </li>
                   </ul>
                   <ul   class="navbar-nav navbar-right">
