--- a/mtaani/templates/all-pages/homepage.html
+++ b/mtaani/templates/all-pages/homepage.html
@@ -3,13 +3,39 @@
 {% block content %}
 <div class=" mt-3 hero"
     style="background-image: url('https://images.pexels.com/photos/10025314/pexels-photo-10025314.jpeg?auto=compress&cs=tinysrgb&w=600'); background-attachment: scroll;">
-    <div class="container"  style="position: relative; top: 50%;">
+    <div class="container"  style="position: relative; top: 5%;">
         <div class="text-white text-center">
             <h5 style="margin-top:6%"> </h5>
             <a href="{% url 'hood' %}" class="btn btn-sm btn-info mt-4">checkout the listed neighbourhoods <span>&#x1F601;</span></a>
         </div>
 
     </div>
+    <div class="container-fluid" >
+        <div class="container" style="margin-top: 2%;">
+            <div class="row">
+                {% for hood in all_hoods %}
+                <div class="col-md-4 mb-4">
+                    <div class="card" >
+                        <img height="" src="{{ hood.neighbourhood_hood_logo.url }}" class="card-img-top" alt="{{ hood.neighbourhood_name }}">
+                        <div class="card-body">
+                            <a href="{% url 'single-hood' hood.id %}">
+                                <h5 class="card-title">{{ hood.neighbourhood_name }}  ({{hood.neighbourhood_location}})</h5>
+                            </a> <br>
+                            <a href="{% url 'members' hood.id %}"><span class="ml-4">{{hood.members.count}} member{{hood.members.count|pluralize}}</span></a>
+                            <p class="card-text">{{hood.neighbourhood_description}}</p>
+                            {% if request.user.profile.profile_neighbourhood == hood %}
+                            <a href="{% url 'leave-hood' hood.id %}" class="btn btn-outline-danger btn-sm">Leave Hood</a>
+                            {% elif not request.user.profile.neighbourhood %}
+                            <a href="{% url 'join-hood' hood.id %}" class="btn btn-primary btn-sm">Join Hood</a>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
 </div>
+
 
 {% endblock %}
