--- a/mtaani/templates/all-pages/new_hood.html
+++ b/mtaani/templates/all-pages/new_hood.html
@@ -1,7 +1,7 @@
 {% extends 'all-pages/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="container bg-white newhood">
+<div class="container bg-white newhood" style="margin-top: 10%;">
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-10">
